# ldscpp

./: CMakeLists.txt  Makefile  README.md
include/: annotation.hpp  common.hpp  continuous.hpp  ld_score.hpp  ldsc.hpp  munge.hpp  regression.hpp  sumstats_commands.hpp  types.hpp
src/: annotation.cpp  common.cpp  continuous.cpp  ld_score.cpp  ldsc.cpp  munge.cpp  regression.cpp  sumstats_commands.cpp
test/: benchmark_speed_wsl.sh  compare_full_parity.py  compare_wiki_flow.py  generate_full_parity.py  generate_wiki_example.py  run_full_parity_wsl.sh  run_wiki_flow_parity_wsl.sh
test/full_flow/: commands_cpp.sh  commands_py.sh
test/full_flow/run/cpp/data/: beta.sumstats  pgc.cross.BIP11.2013-05.txt  print_snps.txt.bz2  regions.bed
test/full_flow/run/py/: ldsc.py  make_annot.py  munge_sumstats.py
test/full_flow/run/py/data/: cts.txt  noalleles.sumstats  pgc.cross.SCZ17.2013-05.txt
test/full_flow/run/py/data/plink/: 22.annot  22.bim  22.thin.annot
test/speed/: results.tsv  summary.tsv
test/wiki_flow/: commands_cpp.sh  commands_py.sh
test/wiki_flow/run/cpp/: commands.executed.txt
test/wiki_flow/run/cpp/data/: w_hm3.snplist
test/wiki_flow/run/py/: commands.executed.txt
